<resources>
    <string name="app_name">Business Card</string>
    <string name="label_new_cart">Novo Cartão</string>
    <string name="label_name">Nome</string>
    <string name="label_phone">Telefone</string>
    <string name="label_email">E-mail</string>
    <string name="label_business">Empresa</string>
    <string name="label_color">Cor</string>
    <string name="label_confirm">Confirmar</string>
    <string name="label_show_success">Cartão cadastrado com sucesso.</string>
    <string name="label_shared">Compartilhar</string>
</resources>